[package]
name = "speedtest"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Speedtest between two computers"
repository = "https://github.com/Antosser/speedtest"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
humansize = "2.1.3"
itertools = "0.12.1"
rand = "0.8.5"
tap = "1.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
