[package]
name = "speedtest"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust-based network speed testing tool between two computers"
repository = "https://github.com/Antosser/speedtest"
readme = "README.md"
keywords = ["speedtest", "bandwidth", "cli", "speed", "test"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.3"
colored = "2.1.0"
humansize = "2.1.3"
itertools = "0.12.1"
parse-size = "1.0.0"
rand = "0.8.5"
tap = "1.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
